[package]
name = "flexulator"
version = "0.1.1"
authors = ["aaronmckenna <aaronmckennacs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
console = "0.14.1"
dialoguer = "0.8.0"
indicatif = "0.16.2"